objects/ffr__MassDeleteControlRecord__c.object
<CustomObject>
    <description>Stores batch information for performing a mass delete on the Accounting Summarization object.</description>
    <fields>
        <fullName>ffr__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffr__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>MassDeleteControlRecord</relationshipLabel>
        <relationshipName>MassDeleteControlRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__BatchStatus__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__JobName__c</fullName>
        <label>JobName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__NotificationType__c</fullName>
        <formula>IF(AND(ffr__TotalNumberOfErrors__c=0,ffr__TotalNumberOfAborts__c=0,ffr__TotalNumberOfExternal__c=0), 
&apos;Successful&apos;, 
IF(ffr__TotalNumberOfErrors__c = ffr__TotalNumberOfLogs__c, 
&apos;Failure&apos;, 
IF(ffr__TotalNumberOfAborts__c &gt; 0, 
&apos;Failure&apos;, 
IF( ffr__TotalNumberOfExternal__c &gt; 0, 
&apos;Failure&apos;, 
&apos;Mixed&apos; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__NumberAttemptedToProcess__c</fullName>
        <label>Number of records attempted to Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__NumberOfQueuableErrors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number Errors from Queuable Jobs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Status__c</fullName>
        <formula>IF( ffr__NumberOfQueuableErrors__c = 0, 
			 	IF( ffr__TotalNumberOfRecordsDeleted__c =  ffr__NumberAttemptedToProcess__c, 
			 		&apos;Complete&apos;,
			 		&apos;Processing&apos;
			 	),
				&apos;Error&apos;
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>ffr__MassDeleteBatchLog__c.ffr__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>ffr__MassDeleteBatchLog__c.ffr__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>ffr__MassDeleteBatchLog__c.ffr__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>ffr__MassDeleteBatchLog__c.ffr__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>ffr__MassDeleteBatchLog__c.ffr__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>ffr__MassDeleteBatchLog__c.ffr__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>ffr__MassDeleteBatchLog__c.ffr__MassDeleteControlRecord__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfRecordsDeleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number Of Records Deleted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mass Delete Control Record</label>
    <nameField>
        <displayFormat>MDCRLog{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Delete Control Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>